--- a/Red Comunitaria/index.html
+++ b/Red Comunitaria/index.html
@@ -1,4 +1,3 @@
-</html>
 <html data-bs-theme="light" lang="en">
 
 <head>
@@ -10,7 +9,7 @@
 
 <body>
     <section id="inicio" class="text-center position-relative">
-        <img class="img-fluid" style="opacity: 0.7;margin-top: 20px;" src="~/Fondo1.png" />
+        <img class="img-fluid" style="opacity: 0.7;margin-top: 20px;" src="img/Fondo1.png" />
         <div class="card position-absolute top-50 start-50 translate-middle" style="border-radius: 20px;z-index: 1;width: 70%;max-width: 400px;height: 70vh;max-height: 200px;background: rgb(255,255,255,0.8);box-shadow: 0px 0px 12px;backdrop-filter: blur(2px);">
             <div class="card-body d-flex justify-content-center align-items-center">
                 <button id="scrollButton" class="btn btn-success" type="button">Saber más</button>
@@ -26,7 +25,7 @@
             </div>
             <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
                 <div class="col">
-                    <div class="card"><img class="img-fluid card-img-top w-100 d-block card-img-top w-100 cover" style="height: 200px;" src="~/Correo.png" />
+                    <div class="card"><img class="img-fluid card-img-top w-100 d-block card-img-top w-100 cover" style="height: 200px;" src="img/Correo.png" />
                         <div class="card-body p-4">
                             <h4 class="card-title">Correo</h4>
                             <p class="card-text"><span style="color: rgb(0, 0, 0);">El servicio de correo es un servicio en línea que, al igual que ocurre con el correo postal tradicional, nos permite enviar y recibir mensajes a través de un servicio de red a múltiples destinatarios.</span></p>
@@ -35,7 +34,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="~/Biblioteca.png" />
+                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="img/Biblioteca.png" />
                         <div class="card-body p-4">
                             <h4 class="card-title">Biblioteca</h4>
                             <p class="card-text"><span style="color: rgb(0, 0, 0);">Las bibliotecas desempeñan una labor esencial en el fomento de la alfabetización y el aprendizaje, el establecimiento de las bases para el desarrollo y la custodia del patrimonio cultural y científico universal.</span></p>
@@ -44,7 +43,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="~/Mensajeria.png" />
+                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="img/Mensajeria.png" />
                         <div class="card-body p-4">
                             <h4 class="card-title">Mensajería instantanea</h4>
                             <p class="card-text"><span style="color: rgb(0, 0, 0);">El servicio de mensajería instantánea trabaja como forma de comunicación en tiempo real entre dos o más personas basada en texto.</span></p>
@@ -53,7 +52,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block card-img-top w-100 fit-cover" style="height: 200px;" src="~/Video.png" />
+                    <div class="card"><img class="card-img-top w-100 d-block card-img-top w-100 fit-cover" style="height: 200px;" src="img/Video.png" />
                         <div class="card-body p-4">
                             <h4 class="card-title">Servicio de vídeo</h4>
                             <p class="card-text"><span style="color: rgb(0, 0, 0);">El servicio de vídeo sirve para Realizar actividades con vídeos interactivos.</span></p>
