--- a/Red Comunitaria/index.html
+++ b/Red Comunitaria/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
                 <div class="col">
-                    <div class="card"><img class="img-fluid card-img-top w-100 d-block card-img-top w-100 cover" style="height: 200px;" src="img/Correo.png" />
+                    <div class="card p-3"><img class="img-fluid card-img-top w-100 d-block card-img-top w-100 cover" style="height: 200px;" src="img/Correo.png" />
                         <div class="card-body p-4">
                             <h4 class="card-title">Correo</h4>
                             <p class="card-text"><span style="color: rgb(0, 0, 0);">El servicio de correo es un servicio en línea que, al igual que ocurre con el correo postal tradicional, nos permite enviar y recibir mensajes a través de un servicio de red a múltiples destinatarios.</span></p>
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="img/Biblioteca.png" />
+                    <div class="card p-3"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="img/Biblioteca.png" />
                         <div class="card-body p-4">
                             <h4 class="card-title">Biblioteca</h4>
                             <p class="card-text"><span style="color: rgb(0, 0, 0);">Las bibliotecas desempeñan una labor esencial en el fomento de la alfabetización y el aprendizaje, el establecimiento de las bases para el desarrollo y la custodia del patrimonio cultural y científico universal.</span></p>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="img/Mensajeria.png" />
+                    <div class="card p-3"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="img/Mensajeria.png" />
                         <div class="card-body p-4">
                             <h4 class="card-title">Mensajería instantanea</h4>
                             <p class="card-text"><span style="color: rgb(0, 0, 0);">El servicio de mensajería instantánea trabaja como forma de comunicación en tiempo real entre dos o más personas basada en texto.</span></p>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block card-img-top w-100 fit-cover" style="height: 200px;" src="img/Video.png" />
+                    <div class="card p-3"><img class="card-img-top w-100 d-block card-img-top w-100 fit-cover" style="height: 200px;" src="img/Video.png" />
                         <div class="card-body p-4">
                             <h4 class="card-title">Servicio de vídeo</h4>
                             <p class="card-text"><span style="color: rgb(0, 0, 0);">El servicio de vídeo sirve para Realizar actividades con vídeos interactivos.</span></p>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" />
+                    <div class="card p-3"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" />
                         <div class="card-body p-4">
                             <h4 class="card-title">Blog</h4>
                             <p class="card-text"><span style="color: rgb(0, 0, 0);">El servicio de blog, es donde podrás </span></p>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" />
+                    <div class="card p-3"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" />
                         <div class="card-body p-4">
                             <h4 class="card-title">VoIp</h4>
                             <p class="card-text">Si quieres contactarte con alguien</p>
